[package]
name = "substrate-module-template"
version = "0.1.0"
authors = ["Shawn Tabrizi <shawntabrizi@gmail.com>"]
edition = "2018"

[features]
default = ['std']
std = [
    'codec/std',
    'support/std',
    'system/std',
]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'

[dev-dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'

[dev-dependencies.sr-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'

[dev-dependencies.runtime-io]
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = '3ba0f2a2dbd37c31851a0ff1c1c0c47aa940de90'
